# ASCIIAnimator

./: .gitignore  CMakeLists.txt  README.md
cmake/: googletest-download.cmake  googletest.cmake
samples/animation_1/: 00.txt  01.txt  02.txt  03.txt  04.txt  05.txt  06.txt  07.txt  08.txt  09.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  20.txt  21.txt  22.txt  23.txt
src/: CMakeLists.txt  animator.cpp  animator.h  asciianimator.cpp  baseline.cpp  baseline.h  frame.cpp  frame.h  framefetcher.cpp  framefetcher.h
tests/: CMakeLists.txt  animatortest.cpp  baselinetest.cpp  framefetchertest.cpp  frametest.cpp  main.cpp
